# EdyPulse

./: .gitignore  CLOUDFLARE_DEPLOY.md  README.md  debug_telegram_auth.py  docker-compose.yml  pyproject.toml  validate_initdata.py  wrangler.toml
backend/: requirements.txt
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  achievement.py  attendance.py  course.py  group.py  payment.py  student.py  user.py
backend/app/services/: achievement_service.py  attendance_service.py  course_service.py  dashboard_service.py  group_service.py  inbox_service.py  lesson_service.py  payment_service.py  student_profile_service.py  student_service.py  user_service.py
backend/tests/: test_auth_api.py  test_repositories.py
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
functions/: [[path]].ts  package-lock.json  package.json
functions/_utils/: auth.ts  seed.ts  services.ts  sheets.ts  store.ts  types.ts
functions/api/: [[path]].ts
scripts/: clear_group_students.py  migrate_to_groups.py
shared/models/: group.py  lesson.py
shared/types/: achievement.ts  attendance.ts  course.ts  group.ts  index.ts  lesson.ts  payment.ts  student.ts  user.ts
sheets/: client.py  setup.py  utils.py
sheets/repositories/: __init__.py  achievements.py  attendance.py  base.py  courses.py  groups.py  headers.py  lessons.py  memory.py  payments.py  students.py  users.py
(+34 files in other folders)
